Thu Sep 27 13:08:53 2001  Tim Janik  <timj@gtk.org>

	* lots of adaptions to BSE changes, fixes and new plugins.

	* a few dav*.[hc] plugins still remain unported, help apprechiated.

	* davxtalstrings.[hc]: ported this to new BSE APIs, GSL engine and
	floats processing.
	* bsenoise.[hc] bsegenosc.[hc] bsemixer.[hc] bsemult.[hc] bseadder.[hc]:
	likewise.

	* bseconstant.[hc]: constant value plugin.

	* bsesimpleosc.[hc]: new simple osciallator taking freq as input signal.

	* bsesnooper.[hc]: new debugging module.

	* bsesimpleadsr.[hc]: simple envelope generator.
	
Thu May 25 02:38:18 2000  Tim Janik  <timj@gtk.org>

	* icons/chorus.c: preliminary icon for DavChorus.

	* davchorus.c: give this a preliminary ugly icon.

Mon May 15 14:22:16 2000  Tim Janik  <timj@gtk.org>

	* davchorus.[hc]: new chorus module from David A. Bartold
	<foxx@mail.utexas.edu>.

	* davguitar.c (dav_guitar_prepare): cut-off frequency fix from David,
	let lesser DC pass through to avoid clipping.

Tue Apr 11 05:36:09 2000  Tim Janik  <timj@gtk.org>

	* applied changes from David A. Bartold <foxx@mail.utexas.edu>:

	* davguitar.[hc]: added trigger velocity, metallic factor and snap
	factor parameters.

	* davorgan.c (dav_organ_class_ref_tables): fixed triangle table setup.

	* davguitar.c:
	* davxtalstrings.c: added note on the use of a stanford patent for
	wavetable modification.

Tue Apr 11 04:23:08 2000  Tim Janik  <timj@gtk.org>

	* *.[hc]: port over from BseParam to GValue and [GB]ParamSpecs.

Tue Mar 28 05:39:44 2000  Tim Janik  <timj@gtk.org>

	* fldbsepattern.c: capitalize procedure categories.

Fri Mar 24 09:44:26 2000  Tim Janik  <timj@gtk.org>

	* *.[hc]: port over from BSE to GLib type system.

Fri Mar 24 01:08:44 2000  Tim Janik  <timj@gtk.org>

	* icons/canyon.xcf:
	* icons/filter.xcf:
	* icons/noise.xcf: Updated plugin icons, from Cyria Arweiler.

	* icons/filter.xcf: bit of retouchee on my part to make the
	inner side darker.

	* davcanyondelay.c: 
	* bsefirfilter.c: 